2009-11-24  Matthew Mundell <matthew.mundell@intevation.de>

	* src/html/src/gsad.xsl, src/html/src/omp.xsl, src/html/src/oap.xsl:
	Convert tabs to spaces.

2009-11-24  Matthew Mundell <matthew.mundell@intevation.de>

	* src/html/src/gsad.xsl, src/html/src/omp.xsl, src/html/src/oap.xsl: New
	files.

2009-11-21  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* VERSION, CMakeLists.txt, src/html/src/about.htm4: Version set
	to 0.8.0.SVN.

	* src/gsad_base.h (preference_t): New.

	* src/gsad_oap.h: Updated proto for get_users_oap.

2009-11-07  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/src/gsa-style.css, src/html/src/help/view_report.htm4: New.

2009-11-06  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/gsad_base.h, src/gsad_base.c: Cleanups and documentation.

2009-11-06  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/src/help/reports.htm4: New.

	* src/validator.c (openvas_validator_alias): New.
	(openvas_validate): Some more tracef-calls.

	* src/validator.h: Add proto accordingly.

2009-11-06  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	*  src/html/src/about.htm4, src/html/src/gplv2.htm4: New.

	* src/html/src/img/edit_inactive.png,
	src/html/src/img/ascending_inactive.png, src/html/src/img/edit.png,
	src/html/src/img/descending_inactive.png: New.

2009-11-04  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/src/img/descending.png, src/html/src/img/ascending.png: New.

2009-10-31  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/validator.c: New.

2009-10-30  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/src/img/download.png, src/html/src/img/bullet2.png,
	src/html/src/img/bullet.png, src/html/src/img/alert_sign.png: New.

2009-10-28  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/gsad_oap.h: Some cosmetics.

	* src/gsad_base.h: Updated protos and added message string.

	* src/gsad_base.c (xsl_transform): Take only xml text now